<resources>
    <string name="app_name">Cryptolitycs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add">Add</string>
    <string name="action_search">Search</string>
    <string name="action_chart">Chart</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_watch_list">Watchlist</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_converter">Converter</string>
    <string name="title_activity_top_coins">Top Coins</string>
    <string name="title_activity_search_coin">Coin</string>
    <string name="title_activity_search_currency">Currency</string>
    <string name="title_activity_chart">Chart</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_settings">Settings</string>

    <string name="common_version">Version 1.0.0</string>
    <string name="about_feedback">Send FeedBack</string>
    <string name="about_credits">Credits</string>
    <string name="about_mp_chart">MP Android Chart</string>
    <string name="about_crypto_compare">Powered by CryptoCompare</string>
    <string name="common_just_now">Just now</string>

    <string name="theme_grey">Grey</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_blue">Blue</string>

    <string name="settings_field_theme">Theme</string>

    <string name="top_coins_description">
        Coins sorted by their total volume across all markets in the last 24 hours.
    </string>
</resources>
