<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

   <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_menu_watch_list"
            android:title="@string/title_activity_watch_list" />

        <item
            android:id="@+id/nav_top_coins"
            android:icon="@drawable/ic_menu_top_coins"
            android:title="@string/title_activity_top_coins" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/title_activity_news" />

        <item
       android:id="@+id/nav_converter"
       android:icon="@drawable/ic_menu_converter"
       android:title="@string/title_activity_converter" />

       <item
           android:id="@+id/nav_settings"
           android:icon="@drawable/ic_menu_converter"
           android:title="@string/title_activity_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/title_activity_about" />

    </group>

</menu>
