<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fproject.cryptolytics.AboutActivity"
    tools:showIn="@layout/app_bar_about">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        android:elevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_image"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:text="@string/app_name"/>

            <LinearLayout
                android:id="@+id/ll_version"
                android:layout_below="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_info"
                android:tint="@color/colorAccentLight"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/iv_image"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_about_info"/>

            <TextView
                android:id="@+id/tv_info"
                android:tint="@color/colorAccentLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_image"
                android:layout_toEndOf="@id/iv_info"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:textSize="14sp"
                android:text="@string/common_version"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_feedback"
                android:layout_below="@+id/ll_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_feedback"
                android:tint="@color/colorAccentLight"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/iv_info"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_about_mail"/>

            <TextView
                android:id="@+id/tv_feedback"
                android:tint="@color/colorAccentLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_info"
                android:layout_toEndOf="@id/iv_feedback"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:text="@string/about_feedback"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        android:elevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <TextView
                android:id="@+id/tv_credits"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/about_credits"/>

            <LinearLayout
                android:layout_below="@id/tv_credits"
                android:id="@+id/ll_mp_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:tint="@color/colorAccentLight"
                android:src="@drawable/ic_about_chart"
                android:id="@+id/iv_mp_chart"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/tv_credits"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/tv_mp_chat"
                android:tint="@color/colorAccentLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_credits"
                android:layout_toEndOf="@id/iv_mp_chart"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:textSize="14sp"
                android:text= "@string/about_mp_chart"/>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/ll_mp_chart"
                android:id="@+id/ll_crypto_compare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_crypto_compare"
                android:tint="@color/colorAccentLight"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/iv_mp_chart"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_about_crypto"/>

            <TextView
                android:id="@+id/tv_crypto_compare"
                android:tint="@color/colorAccentLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_mp_chart"
                android:layout_toEndOf="@id/iv_crypto_compare"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:text="@string/about_crypto_compare"/>

            </LinearLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    </LinearLayout>
    </ScrollView>

</LinearLayout>
